# APSE-Project

from_Qi/: ._models-dev
from_Qi/models-dev/: ._.gitignore  ._.travis.yml  ._Dockerfile  ._LICENSE  ._README.md  ._bootstrap  ._circle.yml  ._docs  ._idaes_models  ._jupyter_notebook_config.py  ._requirements.txt  ._scripts  ._setup.cfg  ._setup.py  ._tests  requirements.txt
from_Qi/models-dev/bootstrap/: ._README.md  ._install_couenne.sh  ._install_ipopt.sh  ._install_supporting_tools.sh
from_Qi/models-dev/docs/: ._.gitignore  ._Makefile  ._README.md  ._api.rst  ._clc_conceptual_design.rst  ._conf.py  ._examples  ._examples.rst  ._images  ._index.rst  ._install.rst  ._intro.rst  ._make.bat  ._models.rst  ._python_wrappers.rst  ._solvents.rst  ._superstructure.rst  models.rst
from_Qi/models-dev/docs/examples/: ._notebooks
from_Qi/models-dev/idaes_models/: .___init__.py  ._core  ._examples  ._process  ._properties  ._python_c_wrapper  ._unit
from_Qi/models-dev/idaes_models/core/: .___init__.py  ._flowsheet_model.py  ._helpers.py  ._loa.py  ._plugins  ._ports.py  ._process_base.py  ._qt_viewer  ._unit_model.py  ._util  ._viewer.py  __init__.py  flowsheet_model.py  loa.py  ports.py  process_base.py  unit_model.py  viewer.py
from_Qi/models-dev/idaes_models/examples/: ._flowsheet_example_01.py  ._properties_PR4.py  ._standard_units_flowsheet_01.py  ._testbed_flash_PR4.py  ._water_demo.py  flowsheet_example_01.py  properties_PR4.py  standard_units_flowsheet_01.py  testbed_flash_PR4.py  water_demo.py
from_Qi/models-dev/idaes_models/process/: ._README.md  .___init__.py  ._conceptd  README.md
from_Qi/models-dev/idaes_models/properties/: .___init__.py  ._kinetic  ._physical
from_Qi/models-dev/idaes_models/python_c_wrapper/: ._README.md  .___init__.py  ._autogenerate  ._build_wrapper.sh  ._pyadolc_properties  ._python_properties  ._sampledir  ._tests  ._wrapper  README.md  (+1 more)
from_Qi/models-dev/idaes_models/python_c_wrapper/wrapper/: ._INSTALL  ._Makefile  ._Makefile.am  ._Makefile_standard  ._configure  ._configure.ac  ._install-sh  ._test_wrapper.c  ._wrapper.c  ._wrapper.h  Makefile  Makefile.am  Makefile_standard  configure  configure.ac  test_wrapper.c  wrapper.c  wrapper.h
from_Qi/models-dev/scripts/: ._redis_performance_test.py  ._run_model
from_Qi/models-dev/tests/: .___init__.py  ._context.py
(+360 files in other folders)
